# syzygium

./: .gitignore  README.md  go.work  go.work.sum  package.json  pnpm-lock.yaml
.moon/: toolchain.yml  workspace.yml
apps/gateway/: go.mod  go.sum  gqlgen.yml  moon.yml  server.go  tools.go
apps/gateway/graph/: generated.go  registry.go  resolver.go  schema.graphqls  schema.resolvers.go
apps/gateway/graph/model/: models_gen.go
apps/template-go/: go.mod  go.sum  main.go  moon.yml
apps/template-next/: next.config.ts  package.json
apps/template-next/app/: page.tsx  providers.tsx
apps/template-react/: moon.yml  package.json  tsconfig.json
apps/template-react/src/: App.tsx  PingDemo.tsx
apps/template-react/src/config/: services.ts
libs/api/: index.ts  package.json
libs/api/src/: http.ts  provider.tsx  rpc.ts
libs/protos/: buf.gen.yaml  buf.yaml  go.mod  moon.yml  package.json  pyproject.toml  tools.go
libs/protos/auth/v1/: auth.proto
libs/protos/infrastructure/v1/: ping.proto
tools/: gen-protos
