[project]
name = "syzygium-protos"
version = "0.1.0"
description = "Generated Protobufs for Syzygium"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf>=5.0",
    "connectrpc>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gen/python"]
